fix #93: adding link to pesterbox
Scrolls the page for any lazy peeople.

--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -14,7 +14,7 @@
 		<header>
 			<h2 class="alt">Welcome back, {{ user_teacher.firstname }}</a></h2>
 			<p>The community values your opinion.
-				Please remember to rate the resources you download.</p>
+				Please remember to <a href="/treasure/me/#myratings">rate</a> the resources you download.</p>
 		</header>
 		<footer>
 			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
