Fixing the pesterbox on the new homepage

--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -13,14 +13,12 @@
 
 		<header>
 			<h2 class="alt">Welcome back, {{ user_teacher.firstname }}</a></h2>
-			<p>You have pending actions.
-				Please remember to share your opinion about the resources that you used recently.</p>
+			<p>The community values your opinion.
+				Please remember to <a href="/treasure/me/#myratings">rate</a> the resources you download.</p>
 		</header>
-
 		<footer>
 			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
 		</footer>
-
 	</div>
 </section>
 {% endif %}
