--- a/django_project/templates/treasure/packs.html
+++ b/django_project/templates/treasure/packs.html
@@ -1,6 +1,7 @@
 {% extends 'treasure/base.html' %}
 
 {% load static %}
+{% load render_help %}
 
 {% block title %}
     Packs
@@ -11,6 +12,9 @@
         <div class="panel-heading clearfix">
 			<h3>Packs</h3>
         </div>
+        
+        <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/packs/new">Create New Pack</a><br></div><br>
+                
         <div class="panel-body">
             <div class="table-responsive">
                 <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -35,9 +39,30 @@
                     </tbody>
                  </table>
             </div>
-        </div> <!-- close body -->
-        <br><div class="span5"><a class="btn btn-block btn-primary" href="/treasure/packs/new">Create New Pack</a><br></div><br>
-    </div> <!-- close panel -->
+        </div> <!-- close panel -->
+        
+        <div class="hero-unit">
+            <h3>Refine Search</h3>
+            <br/>
+            <div class="container">
+                <form class="span12" id="search_form" method="post" action="/treasure/resources/">            
+        
+                    {% csrf_token %}
+
+                        {% for field in form.visible_fields %}
+                            <div class="span3">
+                                {{ field.errors }}
+                                {{field.label}}{% render_help_text field %}<br/>
+                                {{ field }}<br/>
+                            </div>
+                        {% endfor %}
+                        
+                    <div class="span12"><button class="btn btn-primary" type="submit" name="submit">Search</button></div>
+                </form>
+            </div>
+        </div>  
+
+    </div> <!-- close body -->
 
 	<!-- script for table -->
 	<script type="text/javascript">
