Quick Search Box + Bug fixes + Conflict Resolving
#36 #37
As per today’s meeting, quick search box functions just like the
Datatable search.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -58,10 +58,10 @@
                        </ul>
                        <ul class="nav">
                        {% if user.is_authenticated %}
-                           <!--form class="navbar-search pull-left" action="">
-						 		<input class="search-query span2" placeholder="Quick Search" type="text">
-						   </form-->                       
-                           <li><a href="/treasure/search">Search</a></li>
+                           <li><form type='get' class="navbar-search pull-left" action="/treasure/resources/search/">
+						 		<input id='parameter' name='parameter' class="search-query span2" placeholder="Quick Search" type="text">
+						   </form>                       
+                           </li>
                            <li><a href="/treasure/explore">Explore</a></li>
                            <li><a href="/treasure/resources">Resources</a></li>
                            <li><a href="/treasure/packs">Packs</a></li>
