--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -14,7 +14,7 @@
 		<header>
 			<h2 class="alt">Welcome back, {{ user_teacher.firstname }}</a></h2>
 			<p>The community values your opinion.
-				Please remember to rate the resources you download.</p>
+				Please remember to <a href="/treasure/me/#myratings">rate</a> the resources you download.</p>
 		</header>
 		<footer>
 			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
@@ -130,13 +130,12 @@
 	{% endif %}
 </div> <!-- close panel -->
 
-
 {% if MyResources %}
 <div id="mytalk" class="hero-unit panel panel-default">
-{% if want2talk %}
     <div class="panel-heading clearfix">
-		<h4>People Willing to talk about my Resources</h4>
+        <h4>People Willing to talk about my Resources</h4>
     </div>
+{% if want2talkMine %}
     <div class="panel-body">
         <div class="table-responsive">
             <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -148,7 +147,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for record in want2talk %}
+                    {% for record in want2talkMine %}
                         <tr class="studentLabel">
                             <td><a href="/treasure/resource/{{ record.resource.id }}">{{record.resource.name}}</a></td>
                             <td>{{record.teacher}}</td>
@@ -160,11 +159,44 @@
              </table>
         </div>
     </div> <!-- close body -->
-	{% else %}
+    {% else %}
     <p>Nobody has declared interest in discussing your resources yet.</p>
-	{% endif %}
+    {% endif %}
 </div> <!-- close panel -->
 {% endif %}
+
+<div id="mytalk" class="hero-unit panel panel-default">
+    <div class="panel-heading clearfix">
+        <h4>All resources I am happy to talk about</h4>
+    </div>
+{% if want2talk %}
+    <div class="panel-body">
+        <div class="table-responsive">
+            <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>Resource Name</th>
+                        <th>Author</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for record in want2talk %}
+                        <tr class="studentLabel">
+                            <td><a href="/treasure/resource/{{ record.resource.id }}">{{record.resource.name}}</a>. <a href="/treasure/resource/{{ record.resource.id }}/talk/no/random">Remove</a></td>
+                            <td>{{record.resource.author}}</td>
+                        </tr>
+                    {% endfor %}
+
+                </tbody>
+             </table>
+        </div>
+    </div> <!-- close body -->
+    {% else %}
+    <p>No resources selected yet.</p>
+    {% endif %}
+</div> <!-- close panel -->
+
+
 
 <!-- script for tables -->
 <script type="text/javascript">
