Map Rework + Center Presets
#92 #101 #102

--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -61,7 +61,7 @@
                         <a {% if files_resource %}download{% endif %} class="btn btn-block btn-primary" href="/../treasure/resource/{{resource.id}}/download/">{% if downloaded %}Re-{% endif %}{{label}}</a>
 					{% endif %}
                     <a class="btn btn-block btn-warning" href="/../treasure/resource/{{ resource.id}}/evolve">Evolve Resource</a>                    
-                    <a class="btn btn-block btn-success" href="./track/downloads" target="_blank">Track Resource</a>                
+                    <a class="btn btn-block btn-success" href="./track/" target="_blank">Track Resource</a>                
                     <a class="btn btn-block btn-info" href="/../treasure/resource/{{ resource.id }}/versions">View Versions</a>
                     {% if owned %}
                         <a class="btn btn-block btn-danger" href="/../treasure/resource/{{ resource.id }}/edit">Edit Resource</a>
