Combining the quick search and resource pages
Using javascript to mess around with the html, we now have all of our
searching on the one page.

--- a/django_project/static/css/treasure.css
+++ b/django_project/static/css/treasure.css
@@ -67,3 +67,8 @@ a.btn {
 #header {
     background: #333
 }
+
+/* making the width of the search bar smaller */
+#searchbar-container{
+    width: 27%;
+}
