--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -58,8 +58,8 @@
                        </ul>
                        <ul class="nav">
                        {% if user.is_authenticated %}
-                           <li><form type='get' class="navbar-search pull-left" action="/treasure/resources/search/">
-						 		<input id='parameter' name='parameter' class="search-query span2" placeholder="Quick Search" type="text">
+                           <li id="searchbar-container"><form type='get' class="navbar-search pull-left" action="/treasure/resources/">
+						 		<input id='search' name='search' class="search-query span2" placeholder="Quick Search" type="text">
 						   </form>                       
                            </li>
                            <li><a href="/treasure/explore">Explore</a></li>
