--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -8,19 +8,23 @@
 {% endblock %}
 
 {% block body_block %}
-
-    <div class="hero-unit container panel panel-default">
-        
-        <div class="panel-heading clearfix">
-			<h3>Resources</h3>
+<div class="span12">
+    <div class="row">
+    <div class="span9 hero-unit container panel panel-default">
+        <div class="row panel-heading clearfix">
+        <h3>Resources</h3>
         </div>
-        
-        <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_file_resource">Add File Resource</a><br></div>
-        <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_web_resource">Add Web Resource</a><br></div>
+        <div class="span3"><a class="btn btn-block btn-primary" href="/treasure/add_file_resource">Add File Resource</a></div>
+        <div class="span1">
+        </div>
+        <div class="span3"><a class="btn btn-block btn-primary" href="/treasure/add_web_resource">Add Web Resource</a></div>
+        <br/>
+        <hr>
+
 
         
-        <div class="panel-body">
-            <div class="table-responsive">
+        <div class="row panel-body">
+            <div class="span8 table-responsive" style="margin-left:0px">
                 <table id="Resources" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
@@ -43,31 +47,28 @@
                     </tbody>
                  </table>
             </div>
-        </div> <!-- close panel -->
+        </div> <!-- close panel -->       
         
-        <div class="hero-unit">
-            <h3>Refine Search</h3>
-            <br/>
-            <div class="container">
-                <form class="span12" id="search_form" method="post" action="/treasure/resources/">            
+    </div> <!-- close body -->
+    <div class="span3 hero-unit">
+                        <form id="search_form" method="post" action="/treasure/resources/">            
         
                     {% csrf_token %}
-
+                        <div class="span3" style="margin-left:-2em">
+                            <h3 class="span2">Refine Search</h3>
                         {% for field in form.visible_fields %}
-                            <div class="span3">
+                            <div class="span2">
                                 {{ field.errors }}
                                 {{field.label}}{% render_help_text field %}<br/>
                                 {{ field }}<br/>
                             </div>
                         {% endfor %}
-                        
-                    <div class="span12"><button class="btn btn-primary" type="submit" name="submit">Search</button></div>
+                        </div>
+                    <div class="span12" style="margin-left:-0.3em"><button class="btn btn-primary" type="submit" name="submit">Search</button></div>
                 </form>
-            </div>
-        </div>        
-        
-    </div> <!-- close body -->
-
+    </div>
+    </div>
+</div>
 
 	<!-- script for table -->
 	<script type="text/javascript">
