--- a/django_project/templates/treasure/about.html
+++ b/django_project/templates/treasure/about.html
@@ -8,10 +8,10 @@
 
 {% block body_block %}
 <div class="hero-unit">
-    <h2>TReaSURe</h2>
+    <h2>PLAN C - Sharing</h2>
     <div class="row-fluid">
-        <p>The repository of teaching Resources in Scotland; The EduHub</p>
+        <p>Description</p>
     </div>
 </div>
-		<center><h6> A Quintin Cutts'® project</h6></center>
+		<center><h6> Project Plan C</h6></center>
 {% endblock %}
