--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -4,7 +4,7 @@
 
 <html>
     <head>
-        <title>Treasure - {% block title %}{% endblock %}</title>
+        <title>Plan C Sharing - {% block title %}{% endblock %}</title>
         {% block head_block%}{% endblock%}
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,7 @@
                        <span class="icon-bar"></span>
                        <span class="icon-bar"></span>
                    </button>
-                   <a class="brand" href="/treasure/">TReaSURe</a>
+                   <a href="/treasure/"><img class="brand"  src="{% static 'images/logo2.png' %}"></img></a>
 
 				
                    <div class="nav-collapse collapse">
